--- a/src/main/webapp/humanHealthPersonDetail/humanPersonChart.zul
+++ b/src/main/webapp/humanHealthPersonDetail/humanPersonChart.zul
@@ -59,11 +59,11 @@
 										running="true" repeats="true" />
 								</window>
 
-
+								<!-- HeartBeat -->
 								<n:div sclass="col p-1"
 									style="min-width: 230px">
 									<window style="padding: 0px"
-										apply="org.itri.view.humanhealth.detail.HeartBeatCurrentView">
+										apply="org.itri.view.humanhealth.oneperson.detail.HeartBeatCurrentView">
 										<timer id="timer" delay="100"
 											running="true" repeats="true" />
 										<bs-row class="row col px-1 ">
@@ -96,17 +96,16 @@
 											</hbox>
 
 											<!-- Device Status -->
-											<vbox align="end">
+											<hbox>
 												<label id="batteryLabel"
 													class=" h7" />
-												<image width="30%"
-													height="30%" id="batteryImg"
-													src="resources/image/icon-battery-w.png" />
-												<image width="30%"
-													height="30%" id="connectImg"
-													src="resources/image/icon-connect-b-ok.png" />
-											</vbox>
-
+												<vbox align="end">
+													<image
+														src="resources/image/icon2-battery-w.png" />
+													<image
+														id="connectImg" />
+												</vbox>
+											</hbox>
 										</bs-row>
 									</window>
 								</n:div>
@@ -132,7 +131,7 @@
 								<n:div sclass="col p-1"
 									style="min-width: 230px">
 									<window style="padding: 0px;"
-										apply="org.itri.view.humanhealth.detail.OximeterCurrentView">
+										apply="org.itri.view.humanhealth.oneperson.detail.OximeterCurrentView">
 										<timer id="timer" delay="100"
 											running="true" repeats="true" />
 										<bs-row class="row col px-1">
@@ -162,16 +161,17 @@
 													value="${each.id}" />
 											</hbox>
 											<!-- Device Status -->
-											<vbox align="end">
+											<hbox>
 												<label id="batteryLabel"
 													class=" h7" />
-												<image width="30%"
-													height="30%" id="batteryImg"
-													src="resources/image/icon-battery-w.png" />
-												<image width="30%"
-													height="30%" id="connectImg"
-													src="resources/image/icon-connect-b-ok.png" />
-											</vbox>
+												<vbox align="end">
+
+													<image
+														id="batteryImg" src="resources/image/icon2-battery-w.png" />
+													<image
+														id="connectImg" />
+												</vbox>
+											</hbox>
 										</bs-row>
 									</window>
 								</n:div>
@@ -197,7 +197,7 @@
 								<n:div sclass="col p-1"
 									style="min-width: 230px">
 									<window style="padding: 0px;"
-										apply="org.itri.view.humanhealth.detail.BreathRateCurrentView">
+										apply="org.itri.view.humanhealth.oneperson.detail.BreathRateCurrentView">
 										<timer id="timer" delay="1000"
 											running="true" repeats="true" />
 										<bs-row class="row col px-1">
@@ -227,16 +227,17 @@
 													value="${each.id}" />
 											</hbox>
 											<!-- Device Status -->
-											<vbox align="end">
+											<hbox>
 												<label id="batteryLabel"
 													class=" h7" />
-												<image width="30%"
-													height="30%" id="batteryImg"
-													src="resources/image/icon-battery-w.png" />
-												<image width="30%"
-													height="30%" id="connectImg"
-													src="resources/image/icon-connect-b-ok.png" />
-											</vbox>
+												<vbox align="end">
+
+													<image
+														id="batteryImg" src="resources/image/icon2-battery-w.png" />
+													<image
+														id="connectImg" />
+												</vbox>
+											</hbox>
 										</bs-row>
 									</window>
 								</n:div>
@@ -261,7 +262,7 @@
 								<n:div sclass="col p-1"
 									style="min-width: 230px">
 									<window style="padding: 0px;"
-										apply="org.itri.view.humanhealth.detail.TemperatureCurrentView">
+										apply="org.itri.view.humanhealth.oneperson.detail.TemperatureCurrentView">
 										<timer id="timer" delay="100"
 											running="true" repeats="true" />
 										<bs-row class="row col px-1">
@@ -291,16 +292,17 @@
 													value="${each.id}" />
 											</hbox>
 											<!-- Device Status -->
-											<vbox align="end">
+											<hbox>
 												<label id="batteryLabel"
 													class=" h7" />
-												<image width="30%"
-													height="30%" id="batteryImg"
-													src="resources/image/icon-battery-w.png" />
-												<image width="30%"
-													height="30%" id="connectImg"
-													src="resources/image/icon-connect-b-ok.png" />
-											</vbox>
+												<vbox align="end">
+
+													<image
+														id="batteryImg" src="resources/image/icon2-battery-w.png" />
+													<image
+														id="connectImg" />
+												</vbox>
+											</hbox>
 										</bs-row>
 									</window>
 								</n:div>
