--- a/src/main/webapp/humanHealthPersonDetail/humanPersonChart.zul
+++ b/src/main/webapp/humanHealthPersonDetail/humanPersonChart.zul
@@ -33,7 +33,7 @@
 						.titleStyle { font-size: 40px; text-align:
 						center;}
 					</style>
-					<panel title="${each.bedRoom}" border="normal"
+					<panel title="${each.bedRoom} EWS : ${each.totalNewsScore}" border="normal"
 						width="100%">
 						<caption sclass="titleStyle">
 							<label value="" />
@@ -103,7 +103,6 @@
 														src="resources/image/icon2-battery-w.png" />
 													<image
 														id="connectImg" />
-													<label id="ewuLbl" />
 												</vbox>
 											</hbox>
 										</bs-row>
