--- a/src/main/webapp/humanHealthPersonDetail/humanPersonChart.zul
+++ b/src/main/webapp/humanHealthPersonDetail/humanPersonChart.zul
@@ -37,26 +37,6 @@
 						width="100%">
 						<caption sclass="titleStyle" />
 						<panelchildren>
-							<!-- EWS -->
-							<bs-row class="row py-0">
-								<n:div sclass="col p-1">
-									<window
-										style="padding: 0px; z-window-content"
-										apply="org.itri.view.humanhealth.oneperson.detail.EwsView">
-										<textbox id="textboxId"
-											visible="false" value="${each.id}" />
-										<box class="col" pack="center"
-											align="center">
-											<label id="ewsLabel"
-												class=" h2">
-											</label>
-										</box>
-										<timer id="timer" delay="1000"
-											running="true" repeats="true" />
-									</window>
-								</n:div>
-							</bs-row>
-
 							<!-- HeartBeat -->
 							<bs-row class="row py-0">
 								<!-- Chart -->
@@ -319,6 +299,52 @@
 													<image
 														id="connectImg" />
 												</vbox>
+											</hbox>
+										</bs-row>
+									</window>
+								</n:div>
+							</bs-row>
+							
+							<!-- EWS -->
+							<bs-row class="row py-0">
+								<!-- Chart -->
+								<style>
+									.z-window-content { padding:0px;}
+								</style>
+								<window
+									style="padding: 0px; z-window-content"
+									apply="org.itri.view.humanhealth.oneperson.detail.EwsView">
+									<charts id="chart" type="spline"
+										height="150" width="1080" style="padding: 0px;" title="" />
+									<textbox id="textboxId"
+										visible="false" value="${each.id}" />
+									<textbox id="textboxHisDate"
+										visible="false" value="${each.historyDate}" />
+									<timer id="timer" delay="1000"
+										running="true" repeats="true" />
+								</window>
+
+								<n:div sclass="col p-1"
+									style="min-width: 230px">
+									<window style="padding: 0px"
+										apply="org.itri.view.humanhealth.oneperson.detail.EwsCurrentView">
+										<timer id="timer" delay="100"
+											running="true" repeats="true" />
+										<bs-row class="row col px-1 ">
+
+											<!-- Current Status -->
+											<hbox class="col"
+												pack="center" align="center">
+												<!-- left spec -->
+												<vbox
+													class="text-right px-3" width="60px" pack="center"
+													align="end" height="92px">
+												</vbox>
+
+												<!-- right value -->
+												<label class="h1 px-3" />
+												<textbox visible="false"
+													value="${each.id}" />
 											</hbox>
 										</bs-row>
 									</window>
