--- a/src/main/webapp/humanHealthPersonDetail/humanPersonChart.zul
+++ b/src/main/webapp/humanHealthPersonDetail/humanPersonChart.zul
@@ -66,8 +66,8 @@
 										<bs-row class="row col px-1 ">
 
 											<!-- Current Status -->
-											<hbox class="col"
-												pack="center" align="center">
+											<hbox class="col-10"
+												id="curHbox" pack="center" align="center">
 												<!-- left spec -->
 												<vbox
 													class="text-right px-3" width="60px" pack="center"
@@ -93,7 +93,8 @@
 											</hbox>
 
 											<!-- Device Status -->
-											<hbox>
+											<hbox id="devStatHbox"
+												class="col">
 												<label id="batteryLabel"
 													class=" h7" />
 												<vbox align="end">
@@ -132,8 +133,8 @@
 										<timer id="timer" delay="100"
 											running="true" repeats="true" />
 										<bs-row class="row col px-1">
-											<hbox class="col"
-												pack="center" align="center">
+											<hbox class="col-10"
+												id="curHbox" pack="center" align="center">
 												<!-- left spec -->
 												<vbox
 													class="text-right px-3" width="60px" pack="center"
@@ -158,7 +159,8 @@
 													value="${each.id}" />
 											</hbox>
 											<!-- Device Status -->
-											<hbox>
+											<hbox id="devStatHbox"
+												class="col">
 												<label id="batteryLabel"
 													class=" h7" />
 												<vbox align="end">
@@ -198,8 +200,8 @@
 										<timer id="timer" delay="1000"
 											running="true" repeats="true" />
 										<bs-row class="row col px-1">
-											<hbox class="col"
-												pack="center" align="center">
+											<hbox class="col-10"
+												id="curHbox" pack="center" align="center">
 												<!-- left spec -->
 												<vbox
 													class="text-right px-3" width="60px" pack="center"
@@ -224,7 +226,8 @@
 													value="${each.id}" />
 											</hbox>
 											<!-- Device Status -->
-											<hbox>
+											<hbox id="devStatHbox"
+												class="col">
 												<label id="batteryLabel"
 													class=" h7" />
 												<vbox align="end">
@@ -263,8 +266,8 @@
 										<timer id="timer" delay="100"
 											running="true" repeats="true" />
 										<bs-row class="row col px-1">
-											<hbox class="col"
-												pack="center" align="center">
+											<hbox class="col-10"
+												id="curHbox" pack="center" align="center">
 												<!-- left spec -->
 												<vbox
 													class="text-right px-3" width="60px" pack="center"
@@ -289,7 +292,8 @@
 													value="${each.id}" />
 											</hbox>
 											<!-- Device Status -->
-											<hbox>
+											<hbox id="devStatHbox"
+												class="col">
 												<label id="batteryLabel"
 													class=" h7" />
 												<vbox align="end">
@@ -304,7 +308,7 @@
 									</window>
 								</n:div>
 							</bs-row>
-							
+
 							<!-- EWS -->
 							<bs-row class="row py-0">
 								<!-- Chart -->
@@ -333,7 +337,8 @@
 										<bs-row class="row col px-1 ">
 
 											<!-- Current Status -->
-											<hbox class="col"
+											<hbox class="col-10"
+												id="curHbox"
 												pack="center" align="center">
 												<!-- left spec -->
 												<vbox
