--- a/src/main/webapp/clock.zul
+++ b/src/main/webapp/clock.zul
@@ -1,6 +1,6 @@
 <zk xmlns:n="native" xmlns="http://www.zkoss.org/2005/zul">
-	<hbox align="center" pack="center" sclass="box col-12">
-		<label id="clock" sclass="time text-white h2 " width="100%" />
+	<hbox align="center" pack="end" sclass="box col-11">
+		<label id="clock" sclass="time text-white h6 " width="100%" />
 		<timer id="timer" delay="1000" repeats="true">
 			<attribute name="onTimer">
 				clock.setValue(new Date().toString());
